--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Library_Management_System
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\nikun\\Desktop\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.28.jar=C:\\jar files\\mysql-connector-java-8.0.28.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.28.jar}
+    ${file.reference.mysql-connector-java-8.0.28.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
